RESOLVED FIXED50337
Web Inspector: Inspector protocol cleanup task
https://bugs.webkit.org/show_bug.cgi?id=50337
Summary Web Inspector: Inspector protocol cleanup task
Ilya Tikhonovsky
Reported 2010-12-01 11:15:50 PST
just small renames and adjustments for the protocol things. 'handler' keyword in idl file was replaced with 'domain'. 'domain' property was assigned in the each backend to frontend messages. At the next step WebInspector wrapper functions will be removed and 'agents' will be called directly.
Attachments
[patch] initial version. (29.66 KB, patch)
2010-12-01 14:01 PST, Ilya Tikhonovsky
no flags
Ilya Tikhonovsky
Comment 1 2010-12-01 14:01:25 PST
Created attachment 75320 [details] [patch] initial version.
Pavel Feldman
Comment 2 2010-12-01 14:30:03 PST
Comment on attachment 75320 [details] [patch] initial version. View in context: https://bugs.webkit.org/attachment.cgi?id=75320&action=review > LayoutTests/ChangeLog:5 > + clean Please provide a meaningful message. > LayoutTests/inspector/report-API-errors-expected.txt:6 > +Protocol Error: the message is for not existing domain 'wrongDomain' non-existing > WebCore/inspector/front-end/inspector.js:523 > + this.domains.Inspector = this; I don't like "domains" object much. How about: InspectorBackend.registerDomainDispatcher("Inspector", this); InspectorBackend.registerDomainDispatcher("Resources", WebInspector.resourceManager);
Ilya Tikhonovsky
Comment 3 2010-12-03 15:41:56 PST
Committed r73315 M WebKit/chromium/ChangeLog M WebKit/chromium/src/WebDevToolsFrontendImpl.cpp M WebCore/ChangeLog M WebCore/inspector/CodeGeneratorInspector.pm M WebCore/inspector/Inspector.idl M WebCore/inspector/front-end/DOMAgent.js M WebCore/inspector/front-end/inspector.js M WebCore/inspector/front-end/Callback.js M LayoutTests/inspector/report-API-errors-expected.txt M LayoutTests/inspector/report-API-errors.html M LayoutTests/inspector/report-protocol-errors-expected.txt M LayoutTests/inspector/report-protocol-errors.html M LayoutTests/ChangeLog r73315 = 452cc2aeaa47482b6ac77f9a7c77514e02642476 (refs/remotes/trunk)
Note You need to log in before you can comment on or make changes to this bug.